# tocgen

./: .gitignore  LICENSE.md  README.md  pantoc.py  pyproject.toml  setup.py  toc-gen.py  toc_gen.py  tocgen.py
docs/: index.html  search.js  tocgen.html
test/: test.md  ul.html
