[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'toc_gen'
authors = [{name = 'Paul Egeler, MS'}]
description = 'Create a Table of Contents from a Markdown Document'
requires-python = '>=3.10'
keywords = ['markdown']
license = {text = 'GPL-3'}
dynamic = ['version', 'readme']

[project.urls]
Homepage = 'https://github.com/SpectrumHealthResearch/toc-gen'

[project.scripts]
toc_gen = 'toc_gen:main'

[tool.setuptools]
py-modules=['toc_gen']

[tool.setuptools.dynamic]
version = {attr = 'toc_gen.__version__'}
readme = {file = ['README.md'], content-type = 'text/markdown'}

[tool.isort]
force_single_line=true
