[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'pantoc'
authors = [{name = 'Paul Egeler, MS'}]
description = 'Create a Table of Contents Programmatically'
requires-python = '>=3.10'
keywords = ['markdown']
license = {text = 'GPL-3'}
dynamic = ['version', 'readme']

[project.urls]
Homepage = 'https://github.com/SpectrumHealthResearch/pantoc'

[project.scripts]
pantoc = 'pantoc:main'

[tool.setuptools]
py-modules=['pantoc']

[tool.setuptools.dynamic]
version = {attr = 'pantoc.__version__'}
readme = {file = ['README.md'], content-type = 'text/markdown'}

[tool.isort]
force_single_line = true
