[build-system]
requires = ['setuptools', 'setuptools-scm']
build-backend = 'setuptools.build_meta'

[project]
name = 'tocgen'
authors = [{name = 'Paul Egeler, MS'}]
description = 'Programmatically Create a Table of Contents'
requires-python = '>=3.10'
keywords = ['markdown']
license = {text = 'GPL-3'}
dynamic = ['version', 'readme']

[project.urls]
Homepage = 'https://github.com/pegeler/tocgen'

[project.scripts]
tocgen = 'tocgen:main'

[tool.setuptools]
py-modules=['tocgen']

[tool.setuptools.dynamic]
version = {attr = 'tocgen.__version__'}
readme = {file = ['README.md'], content-type = 'text/markdown'}

[tool.isort]
force_single_line = true
